[package]
name = "palantir-proto"
version = "0.1.0"
authors = ["Oleksandr Korienev <alexkorienev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib"]
path       = "src/lib.rs"

[dependencies]
prost = "0.7.0"
prost-types = "0.7.0"

[build-dependencies]
prost-build = "0.7.0"
